themes/dijit.css
/* ... */
.dijitInlineTable {
	/* To inline tables with a given width set (otherwise, use dijitInline above)
	 * Must also put style="-moz-inline-stack" on the node itself to workaround FF2 bugs
	 */
	display: -moz-inline-stack;	/* FF2 */
	display:inline-table;
	display:inline-block;		/* webkit and FF3 */
	#zoom: 1; /* set hasLayout:true to mimic inline-block */
	#display:inline; /* don't use .dj_ie since that increases the priority */
	box-sizing: content-box; -moz-box-sizing: content-box;
	border:0px;
	padding:0px;
}

.dijitTeeny {
	font-size:1px;
	line-height:1px;
}

/*
 * Popup items have a wrapper div (dijitPopup)
 * with the real popup inside, and maybe an iframe too
 */
.dijitPopup {
	position: absolute;
	background-color: transparent;
	margin: 0;
	border: 0;
	padding: 0;
}
.dijit_a11y .dijitPopup,
.dijit_ally .dijitPopup div,
.dijit_a11y .dijitPopup table,
.dijit_a11y .dijitTooltipContainer {
	opacity: 1 !important;
	background-color: white !important;
}
.dj_ie .dijit_a11y .dijitPopup * {
	filter: none;
}

.dijitInputField {
	overflow:hidden;
	#zoom:1;
}

.dijitPositionOnly {
	/* Null out all position-related properties */
	padding: 0px !important;
	border: 0px !important;
	background-color: transparent !important;
	background-image: none !important;
	height: auto !important;
	width: auto !important;
}

.dijitNonPositionOnly {
	/* Null position-related properties */
	float: none !important;
	position: static !important;
	margin: 0px 0px 0px 0px !important;
	vertical-align: middle !important;
}

.dijitBackgroundIframe {
	/*
	 * iframe used for FF2 in high-contrast mode to prevent menu
	 * being transparent
	 */
	position: absolute;
	left: 0px;
	top: 0px;
	width: 100%;
	height: 100%;
	z-index: -1;
	border: 0;
	padding: 0;
	margin: 0;
}

.dijitClickableRegion {
	/* a region we expect the user to click on */
	cursor: pointer;
}


.dijitDisplayNone {
	/* hide something.  Use this as a class rather than element.style so another class can override */
	display:none !important;
}

.dijitContainer {
	/* for all layout containers */
	overflow: hidden;	/* need on IE so something can be reduced in size, and so scrollbars aren't temporarily displayed when resizing */
}

/****
		A11Y
 ****/
.dijit_a11y * {
	background-image:none !important;
	background-color:transparent !important;
}

.dijit_a11y .dijitCalendarIncrementControl .dijitA11ySideArrow {
	padding-left:.2em;
	visibility:visible !important;
}

.dijitA11ySideArrow {
	vertical-align:top;
	margin-right:0em;
	margin-left:.2em;
	line-height:2em;
	text-align:center;
}

.dijit_a11y .dijit * {
	background:white !important;
	color:black !important;
}
.dijit_a11y .dijitButtonNode {
	border:1px solid black !important;
}

.dijit_a11y .dijitButtonDisabled .dijitButtonNode,
.dijit_a11y .dijitDropDownButtonDisabled .dijitButtonNode,
.dijit_a11y .dijitComboButtonDisabled .dijitButtonNode,
.dijit_a11y .dijitComboBoxDisabled .dijitInputField,
.dijit_a11y .dijitComboBoxDisabled .dijitButtonNode,
.dijit_a11y .dijitSpinnerDisabled .dijitButtonNode,
.dijit_a11y .dijitSpinnerDisabled .dijitInputField {
	border-style: dotted !important;
	border-color: #999 !important;
	color:#999 !important;
}

/* button inner contents - labels, icons etc. */
.dijitButtonNode * {
	vertical-align: middle;
}
.dijit_a11y .dijitArrowButtonInner {
	width: 1.0em;
	display: none !important;
}
.dijitButtonNode .dijitArrowButtonInner {
	background:no-repeat center;
	width: 16px;
}
.dijitComboBox .dijitArrowButtonInner {
	display: block;
}

/* In high contrast mode, display the check symbol */
.dijit_a11y .dijitToggleButtonChecked .dijitToggleButtonIconChar {
	display: inline !important;
}


/****
		3-element borders:  ( dijitLeft + dijitStretch + dijitRight )
 ****/
	
.dijitLeft {
	/* Left part of a 3-element border */
	background-position:left top;
	background-repeat:no-repeat;
}

.dijitStretch {
	/* Middle (stretchy) part of a 3-element border */
	white-space:nowrap;			/* MOW: move somewhere else */
	background-repeat:repeat-x;
}

.dijitRight {
	/* Right part of a 3-element border */
	#display:inline;				/* IE7 sizes to outer size w/o this */
	background-position:right top;
	background-repeat:no-repeat;
}

.dijitButton,
.dijitDropDownButton,
.dijitComboButton {
	/* outside of button */
	margin: 0.2em;
}

.dj_safari .dijitToolbar .dijitDropDownButton {
	padding-left: 0.3em;
}

.dijitButtonNode {
	/* Node that is acting as a button -- may or may not be a BUTTON element */
	border:1px solid gray;
	margin:0px;
	padding:.2em .2em .1em;
	line-height:normal;
	cursor:pointer;
	vertical-align:middle;	
	text-align:center;
	white-space: nowrap;
}

.dijitArrowButton {
	/* Node that is acting as a arrow button -- drop down (spinner has its own treatment).  Also gets dijitButtonNode */
	/* place AFTER dijitButtonNode so it overrides */
	padding: 0 .4em;
}
DIV.dijitArrowButton {
	float: right;
}

.dijitSpinner .dijitInputLayoutContainer .dijitArrowButton {
	border-style: solid;
	border-width: 0 0 0 1px !important;
	padding: 0;
	position: absolute;
	right: 0px;
	float: none;
}
.dijitSpinner .dijitInputLayoutContainer .dijitArrowButton {
	position: absolute;
	height: 50%;
}
.dj_ie .dijitSpinner .dijitInputLayoutContainer .dijitArrowButton {
	height: expression(this.parentNode.offsetHeight/2);
}
.dijitSpinner .dijitInputLayoutContainer .dijitDownArrowButton {
	top: none;
	bottom: 0px;
	border-top-width: 1px !important;
}
.dijitSpinner .dijitInputLayoutContainer .dijitUpArrowButton {
	top: 0px;
	bottom: none;
}

.dijitComboButton TABLE {
	/* each cell in a combo-table should have its own separate border */
	border-collapse: separate;
	border:0px;
	padding:0px;
	margin:0px;
}

.dijitComboButton .dijitButtonContents {
	border-right-width:0px !important;
}


.dj_ie BUTTON.dijitButtonNode {
	overflow: visible; /* eliminates arbitrary left and right padding on buttons */
}
/* ... */

