fixes #5643. Added .dijit_a11y .dijitCalendarSelectedDate rule to put an overline on the currently selected date.  Works with all themes in themetester and also tested on Windows in high contrast mode with IE6/7 and FF2/3. Does not affect "normal" styles.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@12405 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -161,6 +161,10 @@
 	visibility:visible !important;
 }
 
+.dijit_a11y .dijitCalendarSelectedDate {
+	text-decoration:overline !important;
+}
+
 .dijitA11ySideArrow {
 	vertical-align:top;
 	margin-right:0em;
